--- a/style.css
+++ b/style.css
@@ -6,9 +6,8 @@ body {
 }
 
 textarea {
-  background: transparent;
-  border: none;
-  resize: none;
+  border: 1px solid #black;
+  resize: horizontal;
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
