textarea updates to correct sizing issues

--- a/style.css
+++ b/style.css
@@ -1,17 +1,18 @@
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
-  line-height: 1;
   padding-bottom: 20px;
 }
 
 textarea {
-  border: 1px solid #black;
-  resize: horizontal;
+  background: transparent;
+  border: none;
+  resize: none;
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
 }
+
 
 .jumbotron {
   text-align: center;
@@ -31,6 +32,7 @@ textarea {
 }
 
 .row {
+  margin-right: 150px;
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;;
